fixed localtalent and residents box spacing...they now fit on the line!

--- a/css/residents.css
+++ b/css/residents.css
@@ -93,7 +93,7 @@ body {
   .box {
     display: inline-block;
     margin-bottom: 200px;
-    margin-left: 5px;
+    margin-left: 3px;
     padding: 10px;
 }
 
